# SimpleKitchen

./: Dockerfile  README.md  deploy.sh  docker-compose.yml  env  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 32cbf351188f_users.py
app/: __init__.py  config.py  models.py
app/core/: database.py  repository.py
app/infrastructure/repository/: user_repository.py
app/presentation/: __init__.py  routes.py
app/static/css/: styles.css
app/templates/: base.html  index.html
