[project]
name = "simplekitchen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "quart>=0.20.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
