[project]
name = "simplekitchen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "quart>=0.20.0",
    "sqlalchemy[async]>=2.0.45",
    "uvicorn>=0.38.0",
]
